--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "arweave": "^1.10.0",
     "chart.js": "^2.9.4",
     "core-js": "^2.6.5",
     "csv-parser": "^3.0.0",
+    "require-from-string": "^2.0.2",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.1",
     "vue-grid-responsive": "^0.2.0",
